apps/trino/trino-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino
  namespace: superset
spec:
  ingressClassName: nginx
  rules:
    - host: trino.samuelbagattin.com
      http:
        paths:
          - backend:
              service:
                name: trino
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
